Updated the order of papers

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 			"deborah_miori": ["Deborah Miori", "https://www.maths.ox.ac.uk/people/deborah.miori"],
 			"claudio_tessone": ["Claudio Tessone", "https://www.ifi.uzh.ch/en/bdlt/Team/Tessone.html"],
 			"maria_silva": ["Maria Inês Silva", "https://scholar.google.com/citations?user=USCr9NMAAAAJ"],
-			"robin_fritsch":  ["Robin Fritsch", "https://disco.ethz.ch/members/rfritsch"],
-			"malte_schlosser":  ["Malte Schlosser", ""],
-			"benjamin_kraner":  ["Benjamin Kraner", "https://www.ifi.uzh.ch/en/bdlt/Team/PhD-Students/Benjamin-Kraner.html"],
+			"robin_fritsch": ["Robin Fritsch", "https://disco.ethz.ch/members/rfritsch"],
+			"malte_schlosser": ["Malte Schlosser", ""],
+			"benjamin_kraner": ["Benjamin Kraner", "https://www.ifi.uzh.ch/en/bdlt/Team/PhD-Students/Benjamin-Kraner.html"],
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -254,7 +254,8 @@
 												<script>document.write(get_authors(["krzysztof_gogol", "robin_fritsch", "malte_schlosser", "johnnatan_messias", "benjamin_kraner", "claudio_tessone"]))</script>
 
 											</li>
-											<li>In Proceedings of the Mathematical Research for Blockchain Economy (MARBLE), Malaga, Spain,
+											<li>In Proceedings of the Mathematical Research for Blockchain Economy
+												(MARBLE), Malaga, Spain,
 												July 2024.</li>
 
 											<ul class="list-inline">
@@ -262,14 +263,16 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/gogol-liquid-staking-marble24.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="pdf/gogol-liquid-staking-marble24.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
-												<li class="list-inline-item"><a href="pdf/award/MARBLE2024_Best_paper_award.pdf"
-													target="_blank">
-														<span class="badge badge-success badge-pill">Best paper award</span></a>
-													</li>
+												<li class="list-inline-item"><a
+														href="pdf/award/MARBLE2024_Best_paper_award.pdf"
+														target="_blank">
+														<span class="badge badge-success badge-pill">Best paper
+															award</span></a>
+												</li>
 											</ul>
 
 											<div id="marble-liquid-stacking" class="collapse">
@@ -297,6 +300,115 @@
 										</ul>
 
 
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Airdrops: Giving Money Away Is Harder Than It Seems</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-airdrop"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://arxiv.org/pdf/2312.02752.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-airdrop" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
+													applications and platforms to attract an initial user base, and to
+													grow the user base over time. In the case of many airdrops, tokens
+													are distributed to select users as a "reward" for interacting with
+													the underlying platform, with a long-term goal of creating a loyal
+													community that will generate genuine economic activity well after
+													the airdrop has been completed. Although airdrops are widely used by
+													the blockchain industry, a proper understanding of the factors
+													contributing to an airdrop's success is generally lacking. In this
+													work, we outline the design space for airdrops, and specify a
+													reasonable list of outcomes that an airdrop should ideally result
+													in. We then analyze on-chain data from several larger-scale airdrops
+													to empirically evaluate the success of previous airdrops, with
+													respect to our desiderata. In our analysis, we demonstrate that
+													airdrop farmers frequently dispose of the lion's share of airdrops
+													proceeds via exchanges. Our analysis is followed by an overview of
+													common pitfalls that common airdrop designs lend themselves to,
+													which are then used to suggest concrete guidelines for better
+													airdrops.
+
+												</p>
+											</div>
+										</ul>
+
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Understanding Blockchain Governance: Analyzing Decentralized Voting
+													to Amend DeFi Smart Contracts</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
+
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-daos"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+
+											<div id="arxiv-daos" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Smart contracts are contractual
+													agreements between participants of a blockchain, who cannot
+													implicitly trust one another. They are software programs that run on
+													top of a blockchain, and we may need to change them from time to
+													time (e.g., to fix bugs or address new use cases). Governance
+													protocols define the means for amending or changing these smart
+													contracts without any centralized authority. They distribute instead
+													the decision-making power to every user of the smart contract: Users
+													vote on accepting or rejecting every change. The focus of this work
+													is to evaluate whether, how, and to what extent these protocols
+													ensure decentralized governance, the fundamental tenet of
+													blockchains, in practice. This evaluation is crucial as smart
+													contracts continue to transform our key, traditional, centralized
+													institutions, particularly banking and finance.
+													In this work, we review and characterize decentralized governance in
+													practice, using Compound -- one of the widely used governance
+													protocols -- as a case study. We reveal a high concentration of
+													voting power in Compound: 10 voters hold together 57.86% of the
+													voting power. Although proposals to change or amend the protocol
+													(or, essentially, the application they support) receive, on average,
+													a substantial number of votes (i.e., 89.39%) in favor, they require
+													fewer than three voters to obtain 50% or more votes. We show that
+													voting on Compound governance proposals can be unfairly expensive
+													for small token holders, and also discover voting coalitions that
+													can further marginalize these users. We plan on publishing our
+													scripts and data set on GitHub to support reproducible research.
+
+												</p>
+											</div>
+										</ul>
 
 
 										<ul class="list-inline">
@@ -444,115 +556,6 @@
 											</div>
 										</ul>
 
-
-
-
-
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Airdrops: Giving Money Away Is Harder Than It Seems</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
-
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-airdrop"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://arxiv.org/pdf/2312.02752.pdf" target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
-														target="_blank">
-														<span class="badge badge-warning badge-pill">Data</span>
-													</a></li>
-											</ul>
-
-											<div id="arxiv-airdrop" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
-													applications and platforms to attract an initial user base, and to
-													grow the user base over time. In the case of many airdrops, tokens
-													are distributed to select users as a "reward" for interacting with
-													the underlying platform, with a long-term goal of creating a loyal
-													community that will generate genuine economic activity well after
-													the airdrop has been completed. Although airdrops are widely used by
-													the blockchain industry, a proper understanding of the factors
-													contributing to an airdrop's success is generally lacking. In this
-													work, we outline the design space for airdrops, and specify a
-													reasonable list of outcomes that an airdrop should ideally result
-													in. We then analyze on-chain data from several larger-scale airdrops
-													to empirically evaluate the success of previous airdrops, with
-													respect to our desiderata. In our analysis, we demonstrate that
-													airdrop farmers frequently dispose of the lion's share of airdrops
-													proceeds via exchanges. Our analysis is followed by an overview of
-													common pitfalls that common airdrop designs lend themselves to,
-													which are then used to suggest concrete guidelines for better
-													airdrops.
-
-												</p>
-											</div>
-										</ul>
-										<ul class="list-inline">
-											<li>
-												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Understanding Blockchain Governance: Analyzing Decentralized Voting
-													to Amend DeFi Smart Contracts</h6>
-											</li>
-											<li>
-												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
-
-											</li>
-											<li>Pre print.</li>
-
-											<ul class="list-inline">
-												<li class="list-inline-item"><a href="#arxiv-daos"
-														data-toggle="collapse">
-														<span class="badge badge-dark badge-pill">Abstract</span></a>
-												</li>
-												<li class="list-inline-item"><a
-														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
-														<span class="badge badge-danger badge-pill">PDF</span></a>
-												</li>
-											</ul>
-
-											<div id="arxiv-daos" class="collapse">
-												<p class="font-italic"><b>Abstract:</b> Smart contracts are contractual
-													agreements between participants of a blockchain, who cannot
-													implicitly trust one another. They are software programs that run on
-													top of a blockchain, and we may need to change them from time to
-													time (e.g., to fix bugs or address new use cases). Governance
-													protocols define the means for amending or changing these smart
-													contracts without any centralized authority. They distribute instead
-													the decision-making power to every user of the smart contract: Users
-													vote on accepting or rejecting every change. The focus of this work
-													is to evaluate whether, how, and to what extent these protocols
-													ensure decentralized governance, the fundamental tenet of
-													blockchains, in practice. This evaluation is crucial as smart
-													contracts continue to transform our key, traditional, centralized
-													institutions, particularly banking and finance.
-													In this work, we review and characterize decentralized governance in
-													practice, using Compound -- one of the widely used governance
-													protocols -- as a case study. We reveal a high concentration of
-													voting power in Compound: 10 voters hold together 57.86% of the
-													voting power. Although proposals to change or amend the protocol
-													(or, essentially, the application they support) receive, on average,
-													a substantial number of votes (i.e., 89.39%) in favor, they require
-													fewer than three voters to obtain 50% or more votes. We show that
-													voting on Compound governance proposals can be unfairly expensive
-													for small token holders, and also discover voting coalitions that
-													can further marginalize these users. We plan on publishing our
-													scripts and data set on GitHub to support reproducible research.
-
-												</p>
-											</div>
-										</ul>
 
 
 										<ul class="list-inline">
