--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
 													</a></li>
+													<li class="list-inline-item"><a
+														href="https://www.youtube.com/watch?v=43B4AtYxWV4"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
 											</ul>
 
 											<div id="arxiv-airdrop" class="collapse">
@@ -376,6 +381,11 @@
 														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a
+													href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
+													target="_blank">
+													<span class="badge badge-info badge-pill">Talk</span>
+												</a></li>
 											</ul>
 
 											<div id="arxiv-daos" class="collapse">
@@ -659,7 +669,7 @@
 												<li class="list-inline-item"><a
 														href="https://www.youtube.com/watch?v=B2tTLte9LGo"
 														target="_blank">
-														<span class="badge badge-warning badge-pill">Talk</span>
+														<span class="badge badge-info badge-pill">Talk</span>
 													</a></li>
 											</ul>
 											</li>
@@ -772,7 +782,7 @@
 												</li>
 												<li class="list-inline-item"><a href="https://youtu.be/o_KZpNPJQiE"
 														target="_blank">
-														<span class="badge badge-warning badge-pill">Talk</span></a>
+														<span class="badge badge-info badge-pill">Talk</span></a>
 												</li>
 												<li class="list-inline-item"><a href="pdf/messias-sdbd-20-slides.pdf"
 														target="_blank">
