Added quantifying arbitrage paper accepted to be appear in MARBLE 2024

--- a/index.html
+++ b/index.html
@@ -300,6 +300,53 @@
 										</ul>
 
 
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Quantifying Arbitrage in Automated Market Makers: An Empirical Study
+													of Ethereum ZK Rollups</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["krzysztof_gogol", "johnnatan_messias", "deborah_miori", "claudio_tessone", "benjamin_livshits"]))</script>
+
+											</li>
+											<li>In Proceedings of the Mathematical Research for Blockchain Economy
+												(MARBLE), Malaga, Spain,
+												July 2024.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#marble-quantifying-arbitrage"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="https://arxiv.org/pdf/2403.16083"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+
+											</ul>
+
+											<div id="marble-quantifying-arbitrage" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Arbitrage opportunities arise
+													from the simultaneous buying and selling of the same asset in
+													different markets to profit from price differences. This research
+													systematically explores arbitrage possibilities between Automated
+													Market Makers (AMMs) on Ethereum zk-rollups and Centralized
+													Exchanges (CEXs). To start, we introduce a theoretical framework to
+													assess arbitrage opportunities and develop a formula for the Maximal
+													Arbitrage Value (MAV), considering both price discrepancies and the
+													liquidity present in trading venues.
+													Following this, we conduct an empirical assessment of the historical
+													MAV between SyncSwap, an AMM on zkSync Era, and Binance, examining
+													the speed at which price discrepancies are resolved considering both
+													explicit and implicit market costs. Overall, the total MAV from July
+													to September 2023 in the USDC-ETH SyncSwap pool amounts to
+													$104.96K (0.24% of trading volume).
+
+												</p>
+											</div>
+										</ul>
+
 
 										<ul class="list-inline">
 											<li>
@@ -326,7 +373,7 @@
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
 													</a></li>
-													<li class="list-inline-item"><a
+												<li class="list-inline-item"><a
 														href="https://www.youtube.com/watch?v=43B4AtYxWV4"
 														target="_blank">
 														<span class="badge badge-info badge-pill">Talk</span>
@@ -382,10 +429,10 @@
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
-													href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
-													target="_blank">
-													<span class="badge badge-info badge-pill">Talk</span>
-												</a></li>
+														href="https://www.youtube.com/watch?v=Ag1LjWBOFlI"
+														target="_blank">
+														<span class="badge badge-info badge-pill">Talk</span>
+													</a></li>
 											</ul>
 
 											<div id="arxiv-daos" class="collapse">
