--- a/index.html
+++ b/index.html
@@ -2424,7 +2424,9 @@
 
 
 						</section>
-						<section class="resume-section experience-section mb-5">
+
+
+						<!-- <section class="resume-section experience-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Systems and
 								Applications
 							</h2>
@@ -2488,11 +2490,27 @@
 								</li>
 							</ul>
 
-						</section>
+						</section> -->
 						<section class="resume-section experience-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards
 							</h2>
 							<ul>
+
+
+
+
+
+								<li>The paper <a href="pdf/gogol-liquid-staking-marble24.pdf">Liquid Staking Tokens in
+										Automated Market Makers</a> received the
+									<a href="pdf/award/MARBLE2024_Best_paper_award.pdf">best paper award</a> from MARBLE
+									2024.
+								</li>
+
+								<li>Successfully completed Ph.D. with <b>Magna Cum Laude</b> distinction,
+									demonstrating exceptional academic excellence and rigorous research capabilities.
+								</li>
+
+
 								<li>My seminar on Blockchains and Decentralized Finance (DeFi) has been nominated for
 									the “Busy Beaver” award – an award for outstanding and excellent lectures at the
 									Saarland University.</li>
@@ -2534,6 +2552,14 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
+
+								<li>(2024) <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
+										Giving Money Away Is Harder Than It Seems</a>. EthCC. Brussels, Belgium.
+								</li>
+								<li>(2024) <a href="https://www.youtube.com/watch?v=Ag1LjWBOFlI">Understanding
+										Blockchain Governance</a>. New York City, USA.
+								</li>
+
 								<li>(2023) <a href="https://fc23.ifca.ai/program.html">Dissecting Bitcoin and
 										Ethereum Transactions: On the Lack of Transaction Contention and Prioritization
 										Transparency in Blockchains</a>.Financial Cryptography and Data Security (FC
