--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<li class="mb-3"><a
 										href="https://scholar.google.com.br/citations?user=EoGEeFAAAAAJ"><span
 											class="fa-container text-center mr-2"><i
-												class="fab fa-google fa-fw"></i></span>Google Schoolar</a>
+												class="fab fa-google fa-fw"></i></span>Google Scholar</a>
 								</li>
 								<li class="mb-3"><a href="https://www.linkedin.com/in/johnnatan-messias/"><span
 											class="fa-container text-center mr-2"><i
