--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
 						<p class="mb-0">
-							I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D.
+							I am a former Research Scientist at <a href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D.
 							in Computer Science from the <a href="https://www.mpi-sws.org/">Max Planck Institute for
 								Software Systems
 								(MPI-SWS)</a>, earned in collaboration with <a
