Updated Johnnatan's job description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dr. Johnnatan Messias">
 	<meta name="description"
-		content="I'm Dr. Johnnatan Messias, a Research Scientist. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
+		content="I'm Dr. Johnnatan Messias, a Research Scientist at the Max Planck Institute for Software Systems (MPI-SWS). I hold a Ph.D. from MPI-SWS, completed in collaboration with Saarland University. My research focuses on enhancing fairness in blockchain technology and Decentralized Finance (DeFi). Previously, I worked at Matter Labs as a Research Scientist and completed a research internship at Chainlink Labs.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -141,7 +141,8 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white">Dr. Johnnatan Messias</h1>
-							<div class="title mb-2">Research Scientist</div>
+							<div class="title mb-2">Research Scientist @ <a href="https://www.mpi-sws.org/">MPI-SWS</a>
+							</div>
 							<ul class="list-unstyled">
 								<!-- <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li> -->
@@ -183,45 +184,38 @@
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
 						<p class="mb-0">
-							I am a former Research Scientist at <a href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D.
-							in Computer Science from the <a href="https://www.mpi-sws.org/">Max Planck Institute for
-								Software Systems
-								(MPI-SWS)</a>, earned in collaboration with <a
-								href="https://www.uni-saarland.de/en/">Universität des
-								Saarlandes (UdS)</a>, with <a href="https://people.mpi-sws.org/~gummadi/">Dr.
-								Krishna P. Gummadi</a> as my advisor. My research primarily revolves around addressing
-							fairness issues
-							in blockchain technology and within the realm of Decentralized Finance (DeFi).
-							In 2022, I did a 6-month research internship at
-							<a href="https://chainlinklabs.com">Chainlink Labs</a>.
-							In 2017, I completed my Master's
-							degree in Computer Science at the
-							Universidade Federal de Minas
-							Gerais (<a href="https://ufmg.br">UFMG</a>), Brazil, with <a
-								href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
-								Fabrício Benevenuto</a> as my advisor. During my MSc, I also held two
-							research intern
-							positions at MPI-SWS in Saarbrücken, Germany. I completed my B.Sc. degree in
-							Computer Science at the Universidade
-							Federal de Ouro Preto (<a href="https://ufop.br">UFOP</a>), Brazil, in 2015. In 2013 and
-							2014, I did an exchange program at Eötvös Loránd
-							University (<a href="https://www.elte.hu/en/">ELTE</a>) in Budapest, Hungary, part of a
-							Brazilian exchange program (Science
-							Without Borders
-							- CAPES).
-							<br>
-							<br>
-							I have also worked on machine learning projects for risk and loan default prediction and
-							health
-							insurance characterization and forecasting. One of the projects was awarded as the most
-							innovative health
-							software in Brazil in 2019, according to IT Forum 365, promoted by PwC and ITMidia. In 2018,
-							I joined the "Eleições sem Fake" project to provide transparency along with the Brazilian
-							elections and
-							counter misinformation.
-							<br>
-							<br>
-							<u>My full name</u>: <span style="color:#FF8C00">Johnnatan Messias Peixoto Afonso</span>.
+							I am a Research Scientist at the <a href="https://www.mpi-sws.org/">Max Planck Institute for
+								Software Systems (MPI-SWS)</a> and a former Research Scientist at <a
+								href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D. in Computer Science from <a
+								href="https://www.mpi-sws.org/">MPI-SWS</a>, completed in collaboration with <a
+								href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>, under the
+							supervision of <a href="https://people.mpi-sws.org/~gummadi/">Prof. Dr. Krishna P.
+								Gummadi</a>. My research focuses on advancing fairness in blockchain technology and
+							Decentralized Finance (DeFi).
+
+							In 2022, I undertook a 6-month research internship at <a
+								href="https://chainlinklabs.com">Chainlink Labs</a>. I earned my Master’s degree in
+							Computer Science from the <a href="https://ufmg.br">Universidade Federal de Minas Gerais
+								(UFMG)</a>, Brazil, in 2017, advised by <a
+								href="https://homepages.dcc.ufmg.br/~fabricio/">Prof. Dr. Fabrício Benevenuto</a>.
+							During my MSc, I held two research internships at MPI-SWS in Saarbrücken, Germany. I
+							completed my B.Sc. in Computer Science at the <a href="https://ufop.br">Universidade Federal
+								de Ouro Preto (UFOP)</a> in 2015 and participated in an exchange program at <a
+								href="https://www.elte.hu/en/">Eötvös Loránd University (ELTE)</a> in Budapest, Hungary,
+							through the Brazilian Science Without Borders (CAPES) program in 2013-2014.
+
+							<br><br>
+
+							I have also worked on machine learning projects focused on risk and loan default prediction
+							as well as health insurance characterization and forecasting. One of these projects was
+							recognized in 2019 as the most innovative health software in Brazil by IT Forum 365,
+							promoted by PwC and ITMidia. In 2018, I contributed to the "Eleições sem Fake" project to
+							promote transparency in Brazilian elections and counter misinformation.
+
+							<br><br>
+
+						<strong><u>Full Name:</u> <span style="color:#007bff">Johnnatan Messias Peixoto Afonso</span>.</strong>
+
 						</p>
 					</div>
 				</section>
