Updated google scholar links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			"gustavo_resende": ["Gustavo Resende", "#"],
 			"marcio_silva": ["Márcio Silva", "#"],
 			"jussara_almeida": ["Jussara Almeida", "http://www.dcc.ufmg.br/~jussara"],
-			"marisa_vasconcelos": ["Marisa Vasconcelos", "https://scholar.google.com.br/citations?user=e5IvuJgAAAAJ&hl=en"],
+			"marisa_vasconcelos": ["Marisa Vasconcelos", "https://scholar.google.com/citations?user=e5IvuJgAAAAJ&hl=en"],
 			"koustuv_saha": ["Koustuv Saha", "http://koustuv.com/"],
 			"mahmoudreza_babaei": ["Mahmoudreza Babaei", "https://people.mpi-sws.org/~babaei"],
 			"lucas_henrique": ["Lucas Henrique", "https://homepages.dcc.ufmg.br/~lhenriquecl"],
@@ -155,7 +155,7 @@
 						<div class="secondary-info ml-md-auto mt-2">
 							<ul class="resume-social list-unstyled">
 								<li class="mb-3"><a
-										href="https://scholar.google.com.br/citations?user=EoGEeFAAAAAJ"><span
+										href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ"><span
 											class="fa-container text-center mr-2"><i
 												class="fab fa-google fa-fw"></i></span>Google Scholar</a>
 								</li>
