--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 					<div class="col-lg-9">
 						<section class="resume-section experience-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Selected
-								Publications
+								Works and Publications
 							</h2>
 							<h6>For a full list of peer-reviewed conference and journal publications, kindly check my <a
 									href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ">Google Scholar</a> or
