--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 						<!--//primary-info-->
 						<div class="secondary-info ml-md-auto mt-2">
 							<ul class="resume-social list-unstyled">
-								<li class="mb-3"><a
-										href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ"><span
+								<li class="mb-3"><a href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ"><span
 											class="fa-container text-center mr-2"><i
 												class="fab fa-google fa-fw"></i></span>Google Scholar</a>
 								</li>
@@ -214,7 +213,15 @@
 
 							<br><br>
 
-						<strong><u>Full Name:</u> <span style="color:#007bff">Johnnatan Messias Peixoto Afonso</span>.</strong>
+							I'm delighted to have contributed as a Program Committee member for <a
+								href="https://fc25.ifca.ai/cfp.html">FC25</a>, <a
+								href="https://aftconf.github.io/aft24/committees.html">AFT24</a>, and <a
+								href="https://www2024.thewebconf.org/organization/reviewers-of-research-tracks">WWW24</a>.
+							
+							<br><br>
+
+							<strong><u>Full Name:</u> <span style="color:#007bff">Johnnatan Messias Peixoto
+									Afonso</span>.</strong>
 
 						</p>
 					</div>
