Updated talk on inscriptions

--- a/index.html
+++ b/index.html
@@ -584,6 +584,11 @@
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a
+													href="https://www.youtube.com/watch?v=B2tTLte9LGo"
+													target="_blank">
+													<span class="badge badge-info badge-pill">Talk</span>
+												</a></li>
 											</ul>
 
 											<div id="arxiv-inscriptions" class="collapse">
@@ -2553,6 +2558,8 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
+								<li>(2025) <a href="https://www.youtube.com/watch?v=ek73DVCDnP8">The Writing is on the Wall: Analyzing the Boom of Inscriptions and its Impact on EVM Blockchains</a>. Ethereum Zürich. Zürich, Switzerland.
+								</li>
 
 								<li>(2024) <a href="https://www.youtube.com/watch?v=43B4AtYxWV4">Airdrops:
 										Giving Money Away Is Harder Than It Seems</a>. EthCC. Brussels, Belgium.
