--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
-													href="https://www.youtube.com/watch?v=B2tTLte9LGo"
+													href="https://www.youtube.com/watch?v=ek73DVCDnP8"
 													target="_blank">
 													<span class="badge badge-info badge-pill">Talk</span>
 												</a></li>
