Updated master class link

--- a/index.html
+++ b/index.html
@@ -2589,7 +2589,7 @@
 									Horizonte, BR.
 								</li>
 								<li>(2020) Countering Misinformation on Social Media Platforms. <a
-										href="https://smart.inovamedialab.org/2020-digital-methods/theme/">SMART Data
+										href="https://www.youtube.com/watch?v=TLdmoiaYvKo">SMART Data
 										Sprint 2020</a>. Lisbon, PT.
 								</li>
 
